--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     "require": {},
     "autoload": {
         "psr-4": {
-            "backend\\modules\\tool\\": "src"
+            "backend\\modules\\tool": ""
         }
     }
 }
