--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "jjawesome/yii-tool",
     "description": "it is a yii fillform tool and middle table create tool that can fast and easy create a fillform page base on yii2 and it can product a api,the middleware tool can run many node,use sql both you can write php-programe,and the query is unbuffer,so do't care memory",
-    "keywords": ["yii2", "扩展", "组件", "上传"],
+    "keywords": ["yii2", "扩展", "组件", "填报","中间表","数据库同步","后台任务"],
     "homepage": "https://github.com/JJawesomeJJ/yii-tool",
     "type": "library",
     "license": "MIT",
